#121 fix arraox vertical alignement and margin for nice-select

--- a/src/assets/stylesheets/sparnatural.scss
+++ b/src/assets/stylesheets/sparnatural.scss
@@ -722,6 +722,9 @@ body {
 								line-height: $height-components-hover;
 							}
 						}
+						&:after {
+							margin-top: -2px;
+						}
 					}
 				}
 				.button-add {
@@ -1356,7 +1359,7 @@ body {
 					background: transparent;
 					border-color: transparent;
 					padding-left: 10px;
-					padding-right: 15px;
+					padding-right: 26px;
 					ul.list li {
 						border-bottom: solid 1px #e8e8e8;
 						img {
@@ -1402,6 +1405,9 @@ body {
 								display: none;
 							}
 						}
+					}
+					&:after {
+						margin-top: 0;
 					}
 				}
 				.nice-select.disabled {
